--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,11 @@
 body {
     font-size: 22px;
-}
-
-main {
-    font-family: monospace;
-}
-
-h1, h2 {
-    color: blue;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+    background: #ffefd5;
+    color: rgb(0, 0, 0);
 }
 
 p {
-    color: purple;
-}
-
-.highlight {
-    text-transform: uppercase;
-    background-color: gold;
-}
-
-.gray {
-    color: gray;
-}
-
-#second {
-    font-style: italic;
+    color: #333;
 }
