--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+    padding: 10%;
+    font-size: 2rem;
+    color: purple;
 }
 
-.container {
-    border: 10px double red;
-    font-size: 1.5rem;
-    margin: 1.5em;
-    /* margin-top: 1.5em;
-    margin-right: 2em;
-    margin-bottom: 2em;
-    margin-left: 2em; */
-    padding: 1em;
-    outline: 5px solid purple;
-    outline-offset: 5px;
-}
-
-.circle {
-    background-color: gold;
-    margin: 3rem auto;
-    width: 100px;
-    height: 100px;
-    border: 2px solid #000;
-    border-radius: 50px;
-    outline: 2px solid red;
-    outline-offset: 0.25rem;
+input, button {
+    font: inherit;
 }
