--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,20 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-/* input, button {
-    font: inherit;
-} */
+a {
+    color: hsl(207, 44%, 49%);
+}
 
-p {
-    line-height: 1.4;
-    font-style: normal;
+a:visited {
+    color: purple;
+}
+
+a:hover, a:focus {
+    color: hsl(189, 44%, 49%, 0.8);
+    background: gold;
+    /* opacity: 0.8; */
+}
+
+a:active {
+    color: red;
 }
