--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,37 @@ body {
     font-size: 2rem;
     font-family: 'Roboto', sans-serif;
 }
+
+.block {
+    width: 30vw;
+    height: 30vw;
+    background-color: black;
+    color: #fff;
+    padding: 1rem;
+}
+
+.left {
+    float: left;
+    margin-right: 1rem;
+}
+
+.right {
+    float: right;
+    margin-left: 1rem;
+}
+
+/* legacy code */
+.clear {
+    clear: both;
+}
+
+section {
+    background-color: bisque;
+    border: 1px solid #333;
+    padding: 1rem;
+    /* legacy
+    overflow: auto;  */
+
+    /* modern way */
+    display: flow-root;
+}
