--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,33 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    font-size: 1.5rem;
     font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem;
+    min-height: 200vh;
 }
 
-.columns {
-    /* column-count: 4;
-    column-width: 250px; */
-    columns: 4 250px;
-    column-rule: 3px solid #333;
-    column-gap: 3rem;
+.outer-container {
+    border: 3px dashed #000;
+    width: 75vw;
+    height: 85vh;
+    margin: 40px auto;
 }
 
-.columns p {
-    margin-top: 0;
+.inner-container {
+    border: 2px dashed #00f;
+    width: 40vw;
+    height: 50vh;
+    margin: 200px auto;
 }
 
-.columns h2 {
-    margin-top: 0;
-    background-color: #333;
-    color: #FFF;
+.box {
+    width: 150px;
+    height: 150px;
+    color: #fff;
     padding: 1rem;
-    /* avoiding padding collapse with resize */
-    break-inside: avoid;
-}
-
-.columns .quote {
-    margin-top: 2rem;
-    font-size: 3rem;
-    text-align: center;
-    color: #333;
-    column-span: all;
-}
-
-/* Define how line will break on resize */
-.nowrap {
-    white-space: nowrap;
 }
 
