--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
     width: 75vw;
     height: 85vh;
     margin: 40px auto;
+    /* for absolute positioning of inner elements */
+    position: relative;
 }
 
 .inner-container {
@@ -30,4 +32,91 @@ body {
     color: #fff;
     padding: 1rem;
 }
+
+.absolute {
+    background-color: #00f;
+    position: absolute;
+    top: 0;
+    /* hides from document on left
+    left: -10000px; */
+    left: 0;
+    /* shows this block on top */
+    z-index: 1;
+}
+
+.relative {
+    background-color: #f00;
+    position: relative;
+    top: 400px;
+    left: 100px;
+}
+
+.fixed {
+    background-color: green;
+    position: fixed;
+    top: 100px;
+}
+
+.sticky {
+    background-color: #000;
+    position: sticky;
+    top: 0;
+}
+
+/* ////////////////////////////////////// */
+html {
+    scroll-behavior: smooth;
+}
+
+section {
+    height: 100vh;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: green;
+}
+
+header, footer {
+    color: #fff;
+    text-align: center;
+    height: 100px;
+}
+
+header {
+    position: sticky;
+    top: 0;
+    font-size: 5rem;
+}
+
+footer {
+    background-color: #000;
+    position: sticky;
+    bottom: 0; 
+    font-size: 3rem;
+}
+
+a:visited {
+    color: #fff;
+}
+
+.social {
+    background-color: royalblue;
+    color: #fff;
+    font-size: inherit;
+    padding: 1rem;
+    position: fixed;
+    top: 30%;
+    left: 0;
+    z-index: 1;
+}
+
+
 
