--- a/css/style.css
+++ b/css/style.css
@@ -5,29 +5,33 @@
     box-sizing: border-box;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+/* || UTILITY CLASSES */
+.nowrap {
+    white-space: nowrap;
+}
+
 /* End reset */
 
 body {
     font: 1.5rem 'Roboto', sans-serif;
     min-height: 100vh;
-
     background-color: #475569;
     background-image: radial-gradient(whitesmoke, #475569);
     display: flex;
     flex-direction: column;
 }
 
-header, nav, main, footer {
-    display: grid;
-    place-content: center;
-    grid-template-columns: 100%;
-    text-align: center;
-} 
-
 header, footer {
     position: sticky;
     background-color: #1E293B;
     color: whitesmoke;
+    text-align: center;
 }
 
 header {
@@ -36,17 +40,37 @@ header {
 
 nav {
     background-color: #fff;
-    color: black;
     padding: 0.5rem;
     border-bottom: 2px solid #000;
+    font-weight: bolder;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+nav a, nav a:visited {
+    color: #000;
+}
+
+nav a:hover, nav a:focus {
+    color: hsla(0, 0%, 20%, 0.6)
+}
+
+main {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1rem;
 }
 
 footer {
     bottom: 0;
 }
 
-main {
-    flex-grow: 1;
+/* || PROFILE CARD */
+.card {
+    scroll-margin-top: 8rem;
 }
 
 /* || SMALL */
