--- a/css/style.css
+++ b/css/style.css
@@ -80,14 +80,14 @@ nav {
 
 main {
     flex-grow: 1;
+    padding: var(--PADDING);
+    display: grid;
+    grid-template-columns: repeat(4, minmax(100px, 300px));
+    gap: min(2vw, 20px);
+
     /* display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-flow: row wrap;
-    gap: min(4vw, 15px); */
-    display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-start;
+    justify-content: flex-start; */
 }
 
 main section {
@@ -141,8 +141,8 @@ a:hover, a:focus {
 
 .square {
     background-color: var(--SQUARE-BGCOLOR);
-    width: var(--SQUARE-SIZE);
-    height: var(--SQUARE-SIZE);
+    /* width: var(--SQUARE-SIZE);
+    height: var(--SQUARE-SIZE); */
     border: var(--BORDERS);
     border-radius: 15px;
     display: grid;
