--- a/css/menu.css
+++ b/css/menu.css
@@ -71,7 +71,7 @@ header {
 
 :is(header:hover, header:focus-within) .menu-icon {
     background-color: transparent;
-    transform: rotate(720deg)
+    transform: rotate(720deg);
 }
 
 :is(header:hover, header:focus-within) .menu-icon::before {
